change converter/app closing fixed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electroncertificate",
   "productName": "Electron Certificate",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A certificate generator app",
   "main": "main.js",
   "scripts": {
@@ -35,8 +35,8 @@
     },
     "extraResources": [
       {
-        "from": "./converter.exe",
-        "to": "./"
+        "from": "./libreoffice",
+        "to": "libreoffice"
       }
     ]
   }
